syntax = "proto3";
package proto;

option go_package = "github.com/Crushaderdk/Mandatory1/proto";



service CourseService {
  rpc GetCourses(getCoursesRequest) returns (ReturnCourses) {};
  rpc GetCourseByID(getCourseByIDRequest) returns (ReturnCourse) {};
}

message Empty {
}

message getCoursesRequest {
string request = 1;
}

message getCourseByIDRequest {
string request = 1;
}

message ReturnCourses {
  string courses = 1;
}

message ReturnCourse {
  string course = 1;
}

message PostCourseRequest {
  string id = 1;
  string name = 2;
  string workload = 3;
  string studentsatisfactionrating = 4;
}

message PostCourseReply {
  string reply = 1;
}